# hexenwail

./: .gitignore  AGENTS.md  BUILD.md  BUILDING.MD  Makefile  NIX_FLAKE.md  README.md  USAGE.md  WASM_BUILD_STATUS.md  flake.nix  hexen2_stderr.txt  release.sh  shell-wasm.nix
.beads/: issues.jsonl  metadata.json
.claude/agents/: beads-triager.md  changelog-writer.md  crash-analyst.md  cvar-auditor.md  gl-audit.md  ironwail-diff.md  nix-builder.md  profile-reader.md  readme-sync.md  shader-validator.md  upstream-sync.md
.claude/projects/-home-josh-tmp-claudedir-uhexen2/memory/: feedback_ironwail_parity.md
.github/workflows/: ci-intelamd.yml  ci-mdl.yml  ci.yml  release.yml
common/: arch_def.h  net_sys.h  q_stdinc.h
docs/: AUTHORS  COMPILE  DEMO_CONFIG.md  README  README.music  SrcNotes.txt
docs/skybox/: skybox_research.md
engine/: CMakeLists.txt
engine/cmake/: toolchain-mingw32.cmake  toolchain-mingw64.cmake
engine/h2shared/: DR_LIBS_VERSION.txt  bgmnull_midi.c  bgmusic.c  cmd.c  cmd.h  common.c  console.h  debuglog.c  draw.c  draw.h  fx_gamma.c  gl_buffer.c  gl_draw.c  gl_fog.c  gl_func.h  gl_matrix.c  gl_matrix.h  gl_mesh.c  gl_model.c  gl_model.h  gl_postprocess.c  gl_postprocess.h  gl_rlight.c  gl_screen.c  gl_shader.c  gl_shader.h  gl_shadow.c  gl_shadow.h  gl_sky.c  gl_sky.h  gl_texmgr.c  gl_texmgr.h  gl_vbo.c  gl_vbo.h  gl_vidsdl.c  gl_warp.c  gl_worldcull.c  glheader.h  glquake.h  h2config.h  (+47 more)
engine/hexen2/: cl_csqc.c  cl_csqc.h  cl_demo.c  cl_effect.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  console.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  host.c  host.h  host_cmd.c  keys.c  menu.c  menu.h  net.h  net_dgrm.c  net_main.c  net_udp.c  net_win.c  net_wins.c  protocol.h  quakedef.h  quakeinc.h  r_part.c  r_part.h  render.h  sbar.c  server.h  sv_effect.c  sv_main.c  sv_move.c  sv_phys.c  sys_unix.c  sys_win.c  view.c  (+1 more)
engine/hexen2/server/: host.c  host_cmd.c  sys_unix.c  sys_win.c
engine/hexenworld/client/: cl_ents.c  quakeinc.h  r_part.c
engine/hexenworld/server/: pr_exec.c
engine/hexenworld/shared/: bspfile.h
engine/web/: shell.html
flatpak/: README.md  com.github.bobberb.hexenwail.desktop  com.github.bobberb.hexenwail.metainfo.xml  com.github.bobberb.hexenwail.yml  hexenwail.hexenwail.desktop  hexenwail.hexenwail.metainfo.xml  hexenwail.hexenwail.yml  hexenwail.sh  io.github.hexenwail.hexenwail.desktop  io.github.hexenwail.hexenwail.metainfo.xml  io.github.hexenwail.hexenwail.yml
gamecode/hc/h2/: invntory.hc  items.hc
gamecode/hc/hw/: items.hc
gamecode/hc/portals/: invntory.hc  items.hc
gamecode/hc/siege/: items.hc
gamecode/res/h2/: default.cfg
gamecode/res/portals/: default.cfg  t9end.cfg  t9start.cfg
h2patch/: h2patch3.c
history/: ARE_WE_IRONWAIL_YET.md  CONSOLE_MOUSE_DESIGN.md  HIZ_ACCEPTANCE_RUNBOOK.md  bindless_test_procedure.md
hw_utils/hwmaster/: Makefile  net.c  sys.h
hw_utils/hwmquery/: Makefile  hwmquery.c
hw_utils/hwrcon/: Makefile  hwrcon.c  hwterm.c
oslibs/dos/libau/: sndpci.dxe
oslibs/dos/libau/src/: ac97_def.c  pcibios.c  pcibios.h  sc_cmi.c  sc_e1371.c  sc_ich.c  sc_inthd.c  sc_inthd.h  sc_sbl24.c  sc_sbliv.c  sc_sbliv.h  sc_sbxfi.c  sc_via82.c
oslibs/windows/codecs/: COPYING.ogg-vorbis
scripts/: makefile.inc  mkrelease.sh
tools/: pak_extract.py  upscale-pak.sh
utils/: progs_dump.c
utils/bsp2map/: Makefile
utils/bspinfo/: Makefile
utils/common/: cmdlib.c  threads.c  util_io.c  util_io.h
utils/dcc/: Makefile  dcc.c
utils/genmodel/: Makefile
utils/hcc/: Makefile
utils/jsh2color/: Makefile
utils/light/: Makefile
utils/pak/: Makefile
utils/qbsp/: Makefile
utils/qfiles/: Makefile
utils/texutils/bsp2wal/: Makefile
utils/texutils/lmp2pcx/: Makefile
utils/vis/: Makefile
